[tool.poetry]
name = "repl_nix_cblack"
build = "build.py"
packages = [{include="black.py"}]
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
[tool.poetry.scripts]
black = "black:main"
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Cython = "^3.0.5"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
